--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -29,7 +29,7 @@
 }
 
 .nav-links .btn-primary:hover {
-  background-color: #e0e0e0;
+  background-color: #67db57;
 }
 
 .nav-links .btn-secondary {
